style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap');

* {
    font-family: 'Inter', sans-serif;
}

body {
    margin: 0;
    background-color: #f5f5f5;
    color: #9f9f9f;
}

.container-fluid {
    padding-left: 38px !important;
    padding-right: 38px !important;
}

.f-grow-1 {
    flex-grow: 1;
}

@media screen and (max-width: 768px) {
    .container-fluid {
        padding-left: 4vw !important;
        padding-right: 4vw !important;
    }
}

/* ------------- hero -------------------  */
.hero {
    /* width: 140%; */
    background-color: #000;
    z-index: 2;
    max-height: 140vh;
    overflow: hidden;
    /* overflow-y: scroll; */
}

.container-full {
    width: 120%;
    /* position: relative; */
    /* left: -20%; */

}

.title-wrap {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 4;
    color: #fff;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 600px;
    /* display: none; */
    opacity: 0;
    transition-duration: 0.4s;
}
.title-wrap {
    height: 300px;
}

.title {
    position: absolute;
    z-index: 999;
    text-align: center;

    letter-spacing: -1vw;
    padding-top: 0.1em;
    font-size: 12vw;
    font-weight: 400;
    line-height: .8;
}

.hero-grid-img {
    display: block;
    max-width: 100%;
    margin-bottom: 30px;
    border-radius: 4px;
}


/* ----------------------- Startegy ----------------  */
.startegic {
    background-color: #fff;
    position: relative;
    z-index: 3;
}

.startegic h2 {
    letter-spacing: -.6vw;
    font-size: 7.8vw;
    font-weight: normal;
}

.startegic h2 span {
    color: #000;
    margin-left: 100px;
}

.startegic .sub-caption {
    letter-spacing: -.09vw;
    font-size: 1.5vw;
    opacity: .7;
}

.startegic .book-a-demo-btn {
    width: 157px;
    height: 58px;
    border-radius: 50px;
    border: 0;
    margin-left: 10px;
    font-size: 1em;
}

.startegic .book-a-demo-btn.black {
    color: #fff;
    background-color: #000;
}

.btns-wrap {
    display: flex;
    justify-content: end;
    margin-bottom: 24px;
}

@media screen and (max-width:1024px) {
    .startegic .book-a-demo-btn {
        width: 128px;
        height: 48px;
        font-size: 1vw;
    }
}

@media screen and (max-width:768px) {
    .startegic h2 {
        letter-spacing: -.175rem;
        font-size: 2.5rem;
        line-height: 1.33;
        font-weight: normal;
    }

    .startegic h2 span {
        color: #000;
        margin-left: 50px;
    }

    .startegic .sub-caption {
        font-size: 1em;
        letter-spacing: -1px;
    }

    .btns-wrap {
        justify-content: space-between;
    }

    .startegic h2 span {
        margin-left: 0;
    }

    .startegic .book-a-demo-btn {
        width: 157px;
        height: 58px;
        font-size: 1em;
    }
}

/* ------------------- Clients --------------------  */
.clients {
    background-color: #000;
    padding-top: 40px;
    padding-bottom: 40px;
    position: relative;

}

.clients img {
    max-height: 35px;
}

.clients .col-12 {
    display: flex;
    justify-content: space-between;
}

@media screen and (max-width:768px) {
    .clients img {
        max-height: 25px;
    }
}

/* -------------------- Outcomes -----------------  */
.outcomes {
    position: relative;

    padding-top: 7%;
    padding-bottom: 7%;
    background-color: #fff;
}

.outcomes h2 {
    font-weight: 400;
    color: #000;
    letter-spacing: -.6vw;
    font-size: 7vw;
}

.outcomes .roller {
    font-size: 4vw;
    font-weight: 500;
    width: 7vw;
    height: 7vw;
    display: inline-block;
    border-radius: 50%;
    background-color: #f5f5f5;
    color: #000;
    display: flex;
    justify-content: center;
    align-items: center;
}

.outcomes .roller span {
    position: relative;
    top: 10px;
}

.card-wrapper {
    max-height: 400px;
    overflow: scroll;
    padding-top: 20%;
}


/* Customize the appearance of the scrollbar for WebKit browsers */
.card-wrapper::-webkit-scrollbar {
    width: 12px;
    /* Set the width of the scrollbar */
}

.card-wrapper::-webkit-scrollbar-thumb {
    background-color: transparent;
    /* Set the color of the scrollbar thumb to transparent */
}

.card-wrapper::-webkit-scrollbar-track {
    background-color: transparent;
    /* Set the color of the scrollbar track to transparent */
}

.outcomes .card-wrapper .card h3 {
    font-weight: normal;
    color: #000;
    letter-spacing: -.2vw;
    font-size: 2.5vw;
}

.outcomes .card-wrapper .card p {
    letter-spacing: -.08rem;
    font-size: 1.5rem;
    line-height: 1.66;
}

@media screen and (max-width:1024px) {
    .outcomes h2 {
        letter-spacing: -.55rem;
        font-size: 7rem;
        line-height: 1.15;
    }

    .outcomes .card-wrapper .card h3 {
        letter-spacing: -.2rem;
        font-size: 2.5rem;
        line-height: 1;
    }

    .outcomes .card-wrapper .card p {
        letter-spacing: -.08rem;
        font-size: 1.5rem;
        line-height: 1.66;
    }

    .outcomes .roller {
        font-size: 5vw;
        width: 7vw;
        height: 7vw;
    }

    .outcomes .roller span {
        top: 8px;
    }
}

@media screen and (max-width:768px) {
    .card-wrapper {
        padding-top: 5%;
    }

    .outcomes h2 {
        letter-spacing: -.15rem;
        font-size: 2.5rem;
    }

    .outcomes .card-wrapper .card h3 {
        letter-spacing: -.15rem;
        font-size: 2rem;
    }

    .outcomes .card-wrapper .card p {
        letter-spacing: -.06rem;
        font-size: 1.2rem;
        line-height: 1.66;
    }

    .outcomes .roller {
        font-size: 10vw;
        width: 14vw;
        height: 14vw;
    }
}

/* ---------------- Summary A --------------- */

.summary-a {
    background-color: #fff;
    text-align: center;
    padding-top: 7%;
    padding-bottom: 7%;
}

.summary-a h3 {
    opacity: 0.5;
    font-weight: normal;
    letter-spacing: -.2vw;
    font-size: 2.5vw;
}
/* ... */

